# ProjectThor

./: .cproject  .gitignore  .project  .travis.yml  CMakeLists.txt  INSTALL.sh  README.md  main.c  readme.md  thor-logs  thor.db
.circleci/: config.yml
Debug/: THOR  main.d  makefile  objects.mk  sources.mk  subdir.mk
Debug/comm/: server.d  subdir.mk
Debug/core/: subdir.mk  thor.d
Debug/database/: subdir.mk
Debug/rpc/: subdir.mk
Debug/security/: subdir.mk
Debug/src/: subdir.mk
Debug/ui/: subdir.mk
comm/: server.c  writer.c
core/: sched.c  thor.c
database/: items_images.c  items_info_db.c  rpc_log_db.c  thor_db.c  usr_info_db.c
headers/: list.h  logger.h  mappings.h  qrgen.h  rpc.h  thor.h
rpc/: clight.c  db_manager.c  interface.c
security/: authorize.c  hash.c  ssl_tls.c
src/: logger.c
ui/: qr.c  qr_generator.c
